minor fixes to ui & switched default view to column flex; map viewer now stretches correctly

--- a/web-ui/src/main/resources/catalog/style/gn_viewer.less
+++ b/web-ui/src/main/resources/catalog/style/gn_viewer.less
@@ -109,7 +109,7 @@
         width: 3.1em;
         border-left: medium none;
         border-radius: 0px;
-        margin-left: -0.3em;
+        margin-left: -0.2em;
         background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.7);
         border-color: transparent;
         color: #FFF;
@@ -117,7 +117,7 @@
     }
 
     .tools-spacer {
-      height: 2em;
+      height: 1.4em;
     }
   }
   .control-tools {
