--- a/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
@@ -73,7 +73,8 @@
 }
 .gn-search-page {
   clear: both;
-  padding-bottom: 50px;
+  flex-grow: 1;
+  position: relative;
   .gn-md-view {
     padding: 0 20px;
   }
@@ -456,7 +457,12 @@ ul.gn-resultview {
 }
 
 [gn-main-viewer] {
-  margin-top: -18px;
+  position: absolute;
+  top: -14px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+
   .panel-tools {
     .panel-heading {
       background-color: transparent;
@@ -482,14 +488,17 @@ ul.gn-resultview {
       margin-top: 15px;
     }
   }
+
+  [ngeo-map] {
+    height: 100%;
+  }
 }
 /*
     Place bottom-bar at the bottom of page; approach is based on http://matthewjamestaylor.com/blog/bottom-footer-demo.htm
 */
 .gn-bottom-bar {
-  bottom:0;
   height:50px;
-  position:absolute;
+  position:relative;
   overflow:hidden;
   width:100%;
   margin-bottom:0px;
@@ -504,6 +513,8 @@ ul.gn-resultview {
 .gn-full {
   min-height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 html, body {
